# Offer_Bot

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/bot/: commands.rs  handlers.rs
src/cache/: redis.rs
src/db/: models.rs  repo.rs  sqlite.rs
src/services/: job.rs  user.rs
src/utils/: scoring.rs
