[package]
name = "OfferBot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
teloxide = "0.17.0"
tokio = "1.52.3"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
